# bartender

./: .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 20220304185418_setup.down.sql  20220304185418_setup.up.sql  20220324050839_drop-logs.down.sql  20220324050839_drop-logs.up.sql
src/: db.rs  ldap.rs  lib.rs  machine.rs  main.rs  oidc.rs  routes.rs
src/db/: drops.rs  items.rs  machines.rs  models.rs  slots.rs
src/ldap/: blocking.rs  client.rs  search.rs  user.rs
src/oidc/: auth.rs  client.rs  user.rs
src/routes/compat/: drinks.rs  items.rs  mod.rs  root.rs  slots.rs  users.rs
src/routes/v2/: sms.rs
