[package]
name = "bartender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
dotenv = "0.15.0"
futures = "0.3.21"
itertools = "0.10.3"
ldap3 = "0.10.2"
log = "0.4.14"
rand = "0.8.5"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sqlx = { version = "0.5.11", features = ["runtime-tokio-native-tls" , "postgres"] }
tokio = { version = "1.17.0", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.2.3", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
trust-dns-resolver = { version = "0.21.1", features = ["tokio-runtime"] }

[features]
