[package]
name = "bartender"
authors = ["Galen Guyer <galen@galenguyer.com>"]
version = "1.2.0"
edition = "2021"
license = "MIT"
description = "A next-generation, blazingly fast, memory safe Drink server"
readme = "README.md"
repository = "https://github.com/galenguyer/bartender"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
axum = "0.5.3"
chrono = { version = "0.4.19", features = ["serde"] }
deadpool = "0.9.3"
dotenvy = "0.15.1"
futures = "0.3.21"
itertools = "0.10.3"
lazy_static = "1.4.0"
ldap3 = "0.10.3"
log = "0.4.16"
rand = "0.8.5"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sqlx = { version = "0.5.13", features = ["runtime-tokio-native-tls" , "postgres", "chrono"] }
tokio = { version = "1.17.0", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
trust-dns-resolver = { version = "0.21.2", features = ["tokio-runtime"] }

[features]
